# ChangeLog for sys-kernel/hardened-sources
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.43 2005/01/14 12:48:10 tocharian Exp $

  14 Jan 2005; Adam Mondl <tocharian@gentoo.org>
  hardened-sources-2.4.28.ebuild:
  Mark stable on x86.

*hardened-sources-2.4.28-r2 (13 Jan 2005)

  13 Jan 2005; Adam Mondl <tocharian@gentoo.org>
  +hardened-sources-2.4.28-r2.ebuild:
  Updates security fixes and adds squashfs 2.1 support. Thanks to Peter S.
  Mazinger for grsecurity patches as well.

*hardened-sources-2.4.28-r1 (23 Dec 2004)

  23 Dec 2004; <plasmaroo@gentoo.org> +hardened-sources-2.4.28-r1.ebuild:
  Security bump. Thank tocharian for rolling a new patchset...

  28 Nov 2004; <solar@gentoo.org> +files/2.4.28-grsec-binfmt_a.out.patch,
  +files/2.4.28-grsec-cmdline-race.patch,
  +files/2.4.28-selinux-binfmt_a.out.patch,
  +files/2.4.28-selinux-cmdline-race.patch, hardened-sources-2.4.28.ebuild:
  - Round up remaining security patches that appear to be missing in 2.4.28. -
  PaX standalone updated to current. hgpv=28.1

*hardened-sources-2.4.28 (28 Nov 2004)

  28 Nov 2004; <solar@gentoo.org> +hardened-sources-2.4.28.ebuild:
  security bump. Thank tocharian for rolling a new patchset

*hardened-sources-2.4.27-r3 (08 Sep 2004)

  08 Sep 2004; Andrea Luzzardi <scox@gentoo.org>
  +hardened-sources-2.4.27-r3.ebuild:
  Applies the new 2.4-27.2 patchball which updates
  GRSecurity to the 2.0.1 version.

*hardened-sources-2.4.27-r2 (31 Aug 2004)

  31 Aug 2004; Andrea Luzzardi <scox@gentoo.org>
  +hardened-sources-2.4.27-r2.ebuild:
  Version bump. 
  This version uses the new 2.4-27.1 patchball which updates 
  both the SELinux PaX hooks patch and the SELinux headers.

*hardened-sources-2.4.27-r1 (09 Aug 2004)

  09 Aug 2004; Andrea Luzzardi <scox@gentoo.org>
  +hardened-sources-2.4.27-r1.ebuild,
  -hardened-sources-2.4.27.ebuild,
  +files/2.4.27-cmdline-race.patch: