@@ -1,9 +1,10 @@
 MD5 dc6dc2dfc15431cd10f425b526db15bf hardened-sources-2.4.27-r2.ebuild 1032
 MD5 466238e40bed9071a61227e357ed6095 hardened-sources-2.4.28-r1.ebuild 1022
+MD5 97f51c15ed026dc4a1a61bcbd8166da9 hardened-sources-2.4.28-r3.ebuild 1029
 MD5 d7a5e7625d9ce5a4d72f118220d46aee hardened-sources-2.4.27-r3.ebuild 1033
 MD5 9b45f8ff020930324af8c15412fa2e2e hardened-sources-2.4.28-r2.ebuild 1029
 MD5 55881cfbd40c45d2037994bf20bdc931 hardened-sources-2.4.28.ebuild 1791
-MD5 0c4acd9a520030de04e8518487c8f37c ChangeLog 11347
+MD5 a090354a9878fbe3a6372f2086e44de2 ChangeLog 11556
 MD5 0a473e60c059cb41c96a6bbcbff84769 metadata.xml 459
 MD5 4a0215139f9aebfe2cc2747743763f08 files/2.4.28-grsec-binfmt_a.out.patch 1887
 MD5 c8985a5695cfda1c35d1b433d62604ce files/2.4.28-selinux-binfmt_a.out.patch 1743
@@ -11,6 +12,7 @@ MD5 073eb0c263e55f7f1d72d14c8957f4e2 files/digest-hardened-sources-2.4.27-r2 145
 MD5 3cfa2f10ac7a4d62112f84dcb047b050 files/digest-hardened-sources-2.4.27-r3 145
 MD5 fcf28c7e79f13550bec1b88ead0be365 files/digest-hardened-sources-2.4.28-r1 145
 MD5 bf22baab393ca4ea4f1a2dcbe51b4442 files/digest-hardened-sources-2.4.28-r2 145
+MD5 5679d140de1f7b19b33d721f8f74ec0a files/digest-hardened-sources-2.4.28-r3 145
 MD5 376d0153645489845937a4ffd83e761b files/2.4.28-grsec-cmdline-race.patch 352
 MD5 8652613a5ac92aa0ad7fdf0cc6c01716 files/digest-hardened-sources-2.4.28 339
 MD5 8850fb5244d9d10736d95a85f3c5b3f1 files/2.4.27-CAN-2004-0394.patch 448
