@@ -1,0 +1,2 @@
+MD5 ac7735000d185bc7778c08288760a8a3 linux-2.4.28.tar.bz2 31064046
+MD5 11ee500c00d17b3d90c1e5b7bff49c99 hardened-patches-2.4-28.4.tar.bz2 577340
